Backport to 1.12.2 Forge
- Use unimined for Forge build
- Removed multi-release implementation and use runtime version check instead, because FML (as in the Forge Mod Loader) is unhappy with the original approach (it scans all classes in the jar, and if it cannot read any due to unsupported class file version, it throws an exception)